deuxieme version : bleue

--- a/page.html
+++ b/page.html
@@ -4,6 +4,6 @@
         <title>Page blanche</title>
     </head>
     <body>
-    Cette page est blanche!
+    Cette pagefafaf est blanche!
     </body>
 </html>
