troisieme version : jaune

--- a/page.html
+++ b/page.html
@@ -4,6 +4,6 @@
         <title>Page blanche</title>
     </head>
     <body>
-    Cette pagefafaf est blanche!
+    Cette page1111 est blanche!
     </body>
 </html>
